Problema de padding corrigido

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     </header> 
     <nav>
         <a href="#">Home</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contato</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
     </nav>
     <main>
       <article>
